res/examples/invalid/fn_using_block_expr_with_stmt_after_return_stmt.eg
(): number => {
    return 123;
    1 + 5;
};

// out: SyntaxError: unreachable code
// out: TypeError: mismatched types: expected type `number` but received `()`